버전관리 학습6(index.html)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     Hello<strong>Git</strong>
     <ol>
         <li>Commit</li>
-        <li>push></li>
+        <li>push</li>
+        <li>pull</li>
     </ol>
 </body>
 </html>
